Fixed spacing when user did not have any friend requests

--- a/style.css
+++ b/style.css
@@ -209,6 +209,7 @@ header nav .alertcount {
 	font-weight: bold;
 	text-align: center;
 	display: inline-block;
+	visibility: hidden;
 }
 
 .requestitem {
